RoleMapper slightly refactored